saving and loading
bedroom
boolean and float properties

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,7 +14,7 @@ rodio = "0.17"
 rfd = "0.11"
 serde = "1.0"
 serde_derive = "1.0"
-postcard = "1.0"
+serde_cbor = "0.10"
 
 [dependencies.gl]
 git = "https://github.com/bjz/gl-rs"
