--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-sdl2 = { version = "0.35", features = ["image", "bundled"] }
+sdl2 = { version = "0.35", features = ["image"] }
 rand = "0.8"
 tiled = "0.11"
 json = "0.12"
